<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        app:srcCompat="@mipmap/ic_logo_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_username_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_pw"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_login_pw_hint"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chkSaveLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_save_info"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:onClick="do_exit"
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:backgroundTint="#FFEB3B"
            app:srcCompat="@mipmap/ic_exit" />

        <Button
            android:onClick="do_login"
            android:id="@+id/btnLogIn"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

    </LinearLayout>

</LinearLayout>