<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvProduct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmployee"
                    android:layout_width="178dp"
                    android:layout_height="169dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_logo_login" />

                <TextView
                    android:id="@+id/txtEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_employee"
                    android:textAlignment="center"
                    android:textColor="#4CAF50"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="166dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_logo_login" />

                <TextView
                    android:id="@+id/txtCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_customer"
                    android:textAlignment="center"
                    android:textColor="#FF9800"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="168dp"
                    android:layout_height="126dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_logo_cate" />

                <TextView
                    android:id="@+id/txtProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_product"
                    android:textAlignment="center"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAdvancedProduct"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_logo_product" />

                <TextView
                    android:id="@+id/txtAdvancedProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_advanced_product"
                    android:textAlignment="center"
                    android:textColor="#E91E63"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPaymentMethod"
                    android:layout_width="168dp"
                    android:layout_height="126dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_payment_method" />

                <TextView
                    android:id="@+id/txtPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_payment_method"
                    android:textAlignment="center"
                    android:textColor="#FFEB3B"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOrders"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_order_bill" />

                <TextView
                    android:id="@+id/txtOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_order"
                    android:textAlignment="center"
                    android:textColor="#4CAF50"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
